# FacialRecognization_Java

./: CMakeLists.txt  README.md  run.sh
java/: FaceProcessor.java
src/: FaceLib.cpp
